Updated HTTP server to completely use blocking IO and Java 21 virtual threads.